--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "serve": "^11.3.2",
     "styled-components": "^5.2.0",
     "typescript": "^3.7.5"
   },
