--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build && node index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
